[gd_scene load_steps=30 format=3 uid="uid://cadip24ccwo6q"]

[ext_resource type="PackedScene" uid="uid://dd0nts174s84k" path="res://Scenes/Vehicle_movement.tscn" id="1_j6e7n"]
[ext_resource type="Script" path="res://Scripts/main.gd" id="1_sbpb4"]
[ext_resource type="PackedScene" uid="uid://b1lv72wgq2xnc" path="res://Scenes/Collectable_object.tscn" id="2_1pi0d"]
[ext_resource type="AudioStream" uid="uid://nnqmqh43ervq" path="res://Assets/sounds/Start.wav" id="2_7jegh"]
[ext_resource type="AudioStream" uid="uid://wuyn3t14l8ic" path="res://Assets/sounds/Press_start.wav" id="2_32c2q"]
[ext_resource type="PackedScene" uid="uid://blf53tseq5hq4" path="res://Scenes/Sound/SoundManager.tscn" id="3_0xp82"]
[ext_resource type="PackedScene" uid="uid://ca7h2il3ay43c" path="res://Scenes/Terrain_test.tscn" id="3_cmosh"]
[ext_resource type="PackedScene" uid="uid://b2p25076emcvk" path="res://Scenes/Sound/CollectSound.tscn" id="4_fr1yy"]
[ext_resource type="AudioStream" uid="uid://dsxlgrbqvslfg" path="res://Assets/sound_effects/flash.mp3" id="4_gl1ap"]
[ext_resource type="Script" path="res://Scripts/points_counter.gd" id="5_lcgfw"]
[ext_resource type="AudioStream" uid="uid://byiyaceillavb" path="res://Assets/sound_effects/bubblepop.wav" id="5_t8iqd"]
[ext_resource type="Texture2D" uid="uid://babgxuvp8ftuj" path="res://Assets/Terrain/waterTexture.png" id="6_lfaja"]
[ext_resource type="AudioStream" uid="uid://db8y1xdjk1n1g" path="res://Assets/sound_effects/catch/catch_8,9.wav" id="7_74mds"]
[ext_resource type="AudioStream" uid="uid://becl3ot3g08es" path="res://Assets/sound_effects/catch/catch_1.wav" id="7_fdyik"]
[ext_resource type="Script" path="res://Scripts/ui_scrip.gd" id="8_ccuvy"]
[ext_resource type="PackedScene" uid="uid://sgnjqag75kd" path="res://Scenes/Ramp_Jump.tscn" id="8_g2yf7"]
[ext_resource type="AudioStream" uid="uid://c3q6rarju5gnv" path="res://Assets/sound_effects/catch/catch_2,3.wav" id="8_hsj0x"]
[ext_resource type="FontFile" uid="uid://4ecp7joovjcb" path="res://Assets/fonts/namaku.regular.ttf" id="8_yu54q"]
[ext_resource type="AudioStream" uid="uid://wpqw6mtykt3t" path="res://Assets/sound_effects/catch/catch_4,5.wav" id="9_1p673"]
[ext_resource type="Texture2D" uid="uid://b0n0s75hc3uto" path="res://Assets/Timer/timer_under.png" id="9_h7shk"]
[ext_resource type="Texture2D" uid="uid://cbdvf4y1bibso" path="res://Assets/Timer/timer_progress.png" id="10_0hs6y"]
[ext_resource type="AudioStream" uid="uid://ctukc8mypo2rd" path="res://Assets/sound_effects/catch/catch_6,7.wav" id="10_1cb22"]
[ext_resource type="PackedScene" uid="uid://c6as1rcvvwj4y" path="res://Scenes/end_scene.tscn" id="12_22y6m"]
[ext_resource type="PackedScene" uid="uid://l7rd14u5o0hj" path="res://Scenes/menu_scene.tscn" id="14_wo6fb"]
[ext_resource type="AudioStream" uid="uid://bhrk3hlu65vo2" path="res://Assets/sound_effects/Sketchbook 2024-08-01.wav" id="26_bps6j"]
[ext_resource type="PackedScene" uid="uid://be6npkqj16mv7" path="res://Scenes/Trees/base_tree.tscn" id="27_1f1v1"]

[sub_resource type="Environment" id="Environment_sn5f3"]
background_mode = 1
background_color = Color(0.207725, 0.43982, 0.841102, 1)
ambient_light_color = Color(0.960375, 0.641588, 0.665189, 1)
tonemap_mode = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_oggjv"]
albedo_texture = ExtResource("6_lfaja")

[sub_resource type="PlaneMesh" id="PlaneMesh_uq350"]

[node name="Node3D" type="Node3D"]
process_mode = 3
script = ExtResource("1_sbpb4")

[node name="BackMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("26_bps6j")
volume_db = -20.0

[node name="StartSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_7jegh")
volume_db = -10.0

[node name="EndSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_gl1ap")
volume_db = -10.0
pitch_scale = 0.95

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_32c2q")

[node name="CollectSound" parent="." instance=ExtResource("4_fr1yy")]
volume_db = -5.0
collect_sounds = Array[AudioStream]([ExtResource("7_fdyik"), ExtResource("8_hsj0x"), ExtResource("9_1p673"), ExtResource("10_1cb22"), ExtResource("7_74mds"), ExtResource("5_t8iqd")])

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_sn5f3")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.733267, -0.268672, -0.624608, 0.619974, -0.113015, 0.77644, -0.279199, -0.956579, 0.0836999, 2.38419e-07, 10, -5.51343e-07)
light_color = Color(0.988235, 0.760784, 0.780392, 1)
light_indirect_energy = 4.0
light_bake_mode = 1
shadow_enabled = true
shadow_opacity = 0.8
shadow_blur = 2.0
directional_shadow_max_distance = 80.0
sky_mode = 1

[node name="VehicleBody3D" parent="." instance=ExtResource("1_j6e7n")]
process_mode = 1
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.38419e-07, -1.80438, -5.51343e-07)
MAX_STEER = 0.45

[node name="EngineSound" parent="VehicleBody3D" instance=ExtResource("3_0xp82")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.38419e-07, 1.80438, 5.51343e-07)

[node name="Camera3D" type="Camera3D" parent="."]
process_mode = 3
transform = Transform3D(1, 0, 0, 0, 0.939692, 0.34202, 0, -0.34202, 0.939692, 0, 27, 29)
projection = 1
size = 43.0
far = 80.0

[node name="CameraPositionGame" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 27, 32)

[node name="CameraPositionMenu" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 27, 32)

[node name="Terrain" parent="." instance=ExtResource("3_cmosh")]
transform = Transform3D(30, 0, -1.13687e-13, 0, 30, 0, 1.13687e-13, 0, 30, -1.62, -4, -6.25849e-07)

[node name="PointsCounter" type="Node3D" parent="." node_paths=PackedStringArray("points_manager")]
process_mode = 1
script = ExtResource("5_lcgfw")
collectable_scene = ExtResource("2_1pi0d")
points_manager = NodePath("../ingame_UI")

[node name="MarkerZ" type="Marker3D" parent="PointsCounter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.38419e-07, 0, -25)

[node name="MarkerX" type="Marker3D" parent="PointsCounter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25, 0, -6.4075e-07)

[node name="WaterMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(50.5, 0, 0, 0, 50.5, 0, 0, 0, 50.5, 2.38419e-07, -4, 0.920999)
visible = false
layers = 16
material_override = SubResource("StandardMaterial3D_oggjv")
mesh = SubResource("PlaneMesh_uq350")

[node name="RampaSalto" parent="." instance=ExtResource("8_g2yf7")]
transform = Transform3D(0.707107, -7.61989e-09, 0.707107, -0.185086, 0.965136, 0.185086, -0.682454, -0.261751, 0.682454, -13.118, -1.6366, -14.7084)

[node name="end_UI" parent="." instance=ExtResource("12_22y6m")]
visible = false

[node name="ingame_UI" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_ccuvy")
MAX_TIME = 100

[node name="StartLabel" type="RichTextLabel" parent="ingame_UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -255.0
offset_top = -87.0
offset_right = 255.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("8_yu54q")
theme_override_font_sizes/normal_font_size = 150
bbcode_enabled = true
text = "[center]SET"
fit_content = true

[node name="PointsLabel" type="RichTextLabel" parent="ingame_UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 197.0
offset_bottom = 120.0
rotation = -0.0698132
theme_override_fonts/normal_font = ExtResource("8_yu54q")
theme_override_font_sizes/normal_font_size = 90
text = "123"
fit_content = true

[node name="TimerLabel" type="TextureProgressBar" parent="ingame_UI"]
layout_mode = 0
offset_left = 671.0
offset_top = 495.0
offset_right = 771.0
offset_bottom = 595.0
scale = Vector2(0.9, 0.9)
max_value = 360.0
value = 360.0
fill_mode = 4
radial_initial_angle = 305.0
texture_under = ExtResource("9_h7shk")
texture_progress = ExtResource("10_0hs6y")

[node name="Flash" type="ColorRect" parent="ingame_UI"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.938449, 0.93845, 0.93845, 1)

[node name="menu_UI" parent="." instance=ExtResource("14_wo6fb")]
process_mode = 3
visible = false

[node name="tree_base" parent="." instance=ExtResource("27_1f1v1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.0379, -0.489191, -23.8641)

[node name="tree_base2" parent="." instance=ExtResource("27_1f1v1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.96143, -0.629077, 23.0431)

[node name="tree_base3" parent="." instance=ExtResource("27_1f1v1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.2103, -1.67911, 12.1845)

[node name="tree_base4" parent="." instance=ExtResource("27_1f1v1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.2633, 0.661999, 20.5707)

[node name="tree_base5" parent="." instance=ExtResource("27_1f1v1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.1669, -3.4954, 11.845)

[node name="tree_base6" parent="." instance=ExtResource("27_1f1v1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 26.1111, -3.25072, -4.70473)

[node name="tree_base7" parent="." instance=ExtResource("27_1f1v1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.1975, -2.55053, 6.06478)

[node name="tree_base8" parent="." instance=ExtResource("27_1f1v1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24.4028, -2.47713, -16.2593)

[connection signal="catched_signal" from="PointsCounter" to="CollectSound" method="play_collect_sound"]
